progressif/main/default/objects/Unite_organisationnelle__c/Unite_organisationnelle__c.object-meta.xml
<CustomObject>
    <label>Unité organisationnelle</label>
    <nameField>
        <label>Nom de l&#39;unité organisationnelle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unités organisationnelles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>