progressif/main/default/objects/Unite_organisationnelle__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Ville de l&#39;Unité organisationnelle</description>
    <label>Ville</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>