progressif/main/default/objects/Unite_organisationnelle__c/fields/Code_OU__c.field-meta.xml
<CustomField>
    <fullName>Code_OU__c</fullName>
    <description>Code de l&#39;unité organisationnelle</description>
    <externalId>true</externalId>
    <label>Code UO</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>