progressif/main/default/objects/Unite_organisationnelle__c/fields/Collection_Family__c.field-meta.xml
<CustomField>
    <fullName>Collection_Family__c</fullName>
    <description>Permet de définir la famille de collecte d&#39;une unité organisationnelle</description>
    <label>Famille de Collecte</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Droits Généraux</fullName>
            </value>
            <value>
                <fullName>Grands comptes - Nationaux</fullName>
            </value>
            <value>
                <fullName>Grands comptes - Cinéma</fullName>
            </value>
            <value>
                <fullName>Grands comptes - Spectacles</fullName>
            </value>
            <value>
                <fullName>Licences Online</fullName>
            </value>
            <value>
                <fullName>Licences Média audiovisuels</fullName>
            </value>
            <value>
                <fullName>Licences Phono</fullName>
            </value>
            <value>
                <fullName>Tous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>