progressif/main/default/objects/Unite_organisationnelle__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <description>Adresse email de l&#39;Unité Organisationnelle</description>
    <label>Adresse email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>