progressif/main/default/objects/Unite_organisationnelle__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Date de fin de validité de l&#39;Unité Organisationnelle</description>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>