progressif/main/default/objects/Unite_organisationnelle__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Numéro de fax de l&#39;Unité organisationnelle</description>
    <label>Télécopie</label>
    <type>Phone</type>
</CustomField>