progressif/main/default/objects/Unite_organisationnelle__c/fields/group_of_customers__c.field-meta.xml
<CustomField>
    <fullName>group_of_customers__c</fullName>
    <description>Groupe de client utilisé par défaut lors de la contractualisation sur le compte de facturation</description>
    <label>Groupe de clients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETR</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>ETR Groupe</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>FR Groupe</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>FRDMA</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>FRONLINE</fullName>
                <label>6</label>
            </value>
            <value>
                <fullName>FROPO</fullName>
                <label>7</label>
            </value>
            <value>
                <fullName>FRRESEAU</fullName>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>