progressif/main/default/objects/Unite_organisationnelle__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <description>Localité de l&#39;Unité organisationnelle</description>
    <label>Localité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Région</fullName>
            </value>
            <value>
                <fullName>Siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>