progressif/main/default/objects/Unite_organisationnelle__c/fields/Parent_organizational_unit__c.field-meta.xml
<CustomField>
    <fullName>Parent_organizational_unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unité organisationnelle parent</description>
    <label>Unité organisationnelle parent</label>
    <referenceTo>Unite_organisationnelle__c</referenceTo>
    <relationshipLabel>Unités organisationnelles</relationshipLabel>
    <relationshipName>Unit_organisationnelle</relationshipName>
    <type>Lookup</type>
</CustomField>