progressif/main/default/objects/Unite_organisationnelle__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Numéro de téléphone de l&#39;Unité Organisationnelle</description>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>