progressif/main/default/objects/Unite_organisationnelle__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <description>Code postal de l&#39;Unité organisationnelle</description>
    <label>Code postal</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>