progressif/main/default/objects/Unite_organisationnelle__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utilisateur responsable de l&#39;Unité organisationnelle</description>
    <label>Responsable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit_organisationnelle</relationshipName>
    <type>Lookup</type>
</CustomField>