progressif/main/default/objects/Unite_organisationnelle__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Date de début de validité de l&#39;Unité organisationnelle</description>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>