progressif/main/default/objects/Unite_organisationnelle__c/fields/Type_of_agency__c.field-meta.xml
<CustomField>
    <fullName>Type_of_agency__c</fullName>
    <description>Type d&#39;agence de l&#39;Unité organisationnelle</description>
    <label>Type d&#39;agence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Délégation</fullName>
            </value>
            <value>
                <fullName>Bureau local</fullName>
            </value>
            <value>
                <fullName>Direction régionale</fullName>
            </value>
            <value>
                <fullName>Direction territoriale</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>