progressif/main/default/objects/Unite_organisationnelle__c/fields/Way__c.field-meta.xml
<CustomField>
    <fullName>Way__c</fullName>
    <description>Voie de l&#39;adresse postale de l&#39;Unitré organisationnelle</description>
    <label>Voie</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>