progressif/main/default/objects/Unite_organisationnelle__c/validationRules/Date_de_fin.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_fin</fullName>
    <active>true</active>
    <description>la date de fin ne peut être antérieur à la date de début de validité</description>
    <errorConditionFormula>End_date__c  &lt;  Start_date__c</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>La Date de fin ne peut être antérieur à la date de début de validité</errorMessage>
</ValidationRule>