progressif/main/default/objects/Unite_organisationnelle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_OU__c</columns>
    <columns>Start_date__c</columns>
    <columns>Responsible__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les unités organisationnelles</label>
</ListView>