progressif/main/default/objects/Unite_organisationnelle__c/listViews/Mes_unites_organisationnelles.listView-meta.xml
<ListView>
    <fullName>Mes_unites_organisationnelles</fullName>
    <columns>NAME</columns>
    <columns>Code_OU__c</columns>
    <columns>Start_date__c</columns>
    <columns>Responsible__c</columns>
    <columns>City__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes unités organisationnelles</label>
</ListView>